--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@ body{
     margin: 100px auto;   
 }
 
+button{
+    padding: 20px;
+    background-color: blue;
+    color: white;
+    border-radius: 20px;
+}
+
 .griglia{
     display: flex;
     flex-wrap: wrap;
