--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,15 @@ button{
     flex-wrap: wrap;
 }
 
+.bg-green{
+    background-color: greenyellow;
+}
+
 .cella{
     width: calc(100% / 10);
     aspect-ratio: 1 / 1;
     border: solid 1px white;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
 }
